bk_ida/gccida/c3/extract_bit_field
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_bit_field/src/expmed.c:1472:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_bit_field/src/expmed.c:1473:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode tmode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_bit_field/src/expmed.c:1482:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_bit_field/src/expmed.c:1483:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_bit_field/src/expmed.c:1484:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_bit_field/src/expmed.c:1485:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v17; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_bit_field/src/expmed.c:1487:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_bit_field/src/expmed.c:1488:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v20; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_bit_field/src/expmed.c:1489:4: error: expected ';' after expression
rtx v21; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_bit_field/src/expmed.c:1489:5: error: use of undeclared identifier 'v21'
rtx v21; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_bit_field/src/expmed.c:1496:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v28; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_bit_field/src/expmed.c:1497:4: error: expected ';' after expression
rtx v29; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_bit_field/src/expmed.c:1497:5: error: use of undeclared identifier 'v29'
rtx v29; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_bit_field/src/expmed.c:1502:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v34; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_bit_field/src/expmed.c:1504:4: error: expected ';' after expression
rtx last_insn; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_bit_field/src/expmed.c:1504:5: error: use of undeclared identifier 'last_insn'
rtx last_insn; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_bit_field/src/expmed.c:1505:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v37; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_bit_field/src/expmed.c:1508:4: error: expected ';' after expression
rtx v40; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_bit_field/src/expmed.c:1508:5: error: use of undeclared identifier 'v40'
rtx v40; // rbp 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_bit_field/src/obj/expmed.o] Error 1
